--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "netlify-identity-widget": "^1.9.1",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "stripe": "^8.129.0"
   }
 }
