--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
     "gatsby": "^2.29.2",
     "gatsby-plugin-create-client-paths": "^2.7.0",
+    "graphql-tag": "^2.11.0",
     "netlify-identity-widget": "^1.9.1",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
